plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id "io.github.intisy.online-gradle" version "1.7.2"
}

online {
    autoUpdate = true
    updateDelay = 3600
    presets = [
            "https://raw.githubusercontent.com/intisy/gradle-snippets/presets/default.preset:1.8",
            "https://raw.githubusercontent.com/intisy/gradle-snippets/presets/publish.preset"
    ]
}

repositories {
    mavenLocal()
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    implementation("com.github.docker-java:docker-java:3.5.1") {
        exclude group: "com.github.docker-java", module: "docker-java-transport-jersey"
    }
    implementation "com.github.docker-java:docker-java-transport-httpclient5:3.5.1"
    implementation "com.google.code.gson:gson:2.10.1"
    implementation "org.apache.commons:commons-compress:1.24.0"
    implementation "org.slf4j:slf4j-simple:2.0.7"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.1"
}

application {
    mainClass = "io.github.intisy.docker.EmbeddedDockerManager"
}